# Generated by Django 6.0.6 on 2026-06-29 10:15

from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('sentinelapi', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Student',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('first_name', models.CharField(max_length=100)),
                ('last_name', models.CharField(max_length=100)),
                ('student_id', models.CharField(max_length=20, unique=True)),
                ('email', models.EmailField(max_length=254, unique=True)),
                ('enrollment_date', models.DateField()),
                ('prior_academic_standing', models.CharField(choices=[('good', 'Good'), ('at risk', 'At Risk')], default='good', max_length=100)),
            ],
            options={
                'constraints': [models.CheckConstraint(condition=models.Q(('prior_academic_standing__in', ['good', 'at risk'])), name='valid_prior_academic_standing')],
            },
        ),
    ]
