# Generated by Django 6.0.6 on 2026-07-01 03:58

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('sentinelapi', '0005_assessmenttype_courseassessmenttype_enrollment'),
    ]

    operations = [
        migrations.CreateModel(
            name='Assessment',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('title', models.CharField(max_length=100)),
                ('max_score', models.DecimalField(decimal_places=2, max_digits=10)),
                ('due_date', models.DateTimeField()),
                ('course_assessment_type', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='assessments', to='sentinelapi.courseassessmenttype')),
            ],
        ),
        migrations.CreateModel(
            name='StudentAssessment',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('score', models.DecimalField(blank=True, decimal_places=2, max_digits=10, null=True)),
                ('completed_date', models.DateTimeField(blank=True, null=True)),
                ('is_missing', models.BooleanField(default=False)),
                ('assessment', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='student_assessments', to='sentinelapi.assessment')),
                ('enrollment', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='student_assessments', to='sentinelapi.enrollment')),
            ],
        ),
        migrations.AddConstraint(
            model_name='assessment',
            constraint=models.UniqueConstraint(fields=('course_assessment_type', 'title'), name='unique_assessment_title_per_course_assessment_type'),
        ),
        migrations.AddConstraint(
            model_name='studentassessment',
            constraint=models.UniqueConstraint(fields=('enrollment', 'assessment'), name='unique_enrollment_assessment'),
        ),
        migrations.AddConstraint(
            model_name='studentassessment',
            constraint=models.CheckConstraint(condition=models.Q(models.Q(('completed_date__isnull', True), ('is_missing', False), ('score__isnull', True)), models.Q(('completed_date__isnull', False), ('is_missing', False), ('score__isnull', False)), models.Q(('completed_date__isnull', True), ('is_missing', True), ('score__isnull', True)), _connector='OR'), name='valid_student_assessment_state'),
        ),
    ]
