Table instructors {
  id integer [primary key]
  first_name varchar
  last_name varchar
  email varchar [unique, not null]
  password varchar [not null]
  bio text
  subject_taught varchar
  university varchar
  is_active boolean
}

Table courses {
  id integer [primary key]
  instructor_id integer [not null]
  course_name varchar [not null]
  description text
  term varchar
  is_active boolean
  course_image_url varchar
  created_at timestamp
}

Table students {
  id integer [primary key]
  first_name varchar [not null]
  last_name varchar [not null]
  student_id varchar [unique, not null]
  email varchar [unique]
  prior_academic_standing varchar
  is_active boolean
  created_at timestamp
}

Table enrollments {
  id integer [primary key]
  course_id integer [not null]
  student_id integer [not null]
  grade_average decimal
  attendance_rate decimal
  missing_assignment_rate decimal
  risk_score decimal
  risk_band varchar
  enrolled_at timestamp
  updated_at timestamp
}

Table assessments {
  id integer [primary key]
  title varchar [not null]
  course_assessment_type_id integer [not null]
  max_score decimal
  due_date date
  is_archived boolean
}

Table student_assessments {
  id integer [primary key]
  enrollment_id integer [not null]
  assessment_id integer [not null]
  score decimal
  is_missing boolean
  completed_date timestamp
  is_archived boolean
}

Table assessment_types {
  id integer [primary key]
  name varchar [unique, not null]
}

Table course_assessment_types {
  id integer [primary key]
  course_id integer [not null]
  assessment_type_id integer [not null]
  weight decimal [not null]
  risk_score_weight decimal [not null, default: 0]

  indexes {
    (course_id, assessment_type_id) [unique]
  }
}

Ref: instructors.id < courses.instructor_id

Ref: courses.id < enrollments.course_id
Ref: students.id < enrollments.student_id

Ref: enrollments.id < student_assessments.enrollment_id
Ref: assessments.id < student_assessments.assessment_id

Ref: courses.id < course_assessment_types.course_id
Ref: assessment_types.id < course_assessment_types.assessment_type_id
Ref: course_assessment_types.id < assessments.course_assessment_type_id
